--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>John Smith</title>
+    <title>Products</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
